--- a/6-1 HTML/2-Estructura_Interna.html
+++ b/6-1 HTML/2-Estructura_Interna.html
@@ -1,3 +1,11 @@
 <html>
+
+<head>
+    <title>Titulo de la pagina</title>
+    <meta charset="UTF-8">
+</head>
+<body>
+    Cuerpo de la pagina
+</body>
     
 </html>
